feat: add coding style guide, project architecture documentation, and SQL schema